module(
    name = "fmeum_rules_runfiles",
    version = "0.0.1",
    compatibility_level = 1,
)

install_dev_dependencies = use_extension(
    "@fmeum_rules_runfiles//bzlmod:dev_extensions.bzl",
    "install_dev_dependencies",
    dev_dependency = True,
)
use_repo(
    install_dev_dependencies,
    custom_repo_name = "other_repo",
)
