module(
    name = "fmeum_rules_runfiles",
    compatibility_level = 1,
    version = "0.2.0",
)

bazel_dep(name = "platforms", dev_dependency = True, version = "0.0.5")
bazel_dep(name = "bazel_skylib", dev_dependency = True, version = "1.3.0")

install_dev_dependencies = use_extension(
    "@fmeum_rules_runfiles//bzlmod:dev_extensions.bzl",
    "install_dev_dependencies",
    dev_dependency = True,
)

use_repo(
    install_dev_dependencies,
    "fmeum_rules_runfiles_tests",
    custom_module_name = "other_module",
    custom_repo_name = "other_repo",
)
