module(
    name = "fmeum_rules_runfiles_tests",
)

bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "fmeum_rules_runfiles", version = "")

local_path_override(
    module_name = "fmeum_rules_runfiles",
    path = "..",
)

bazel_dep(name = "other_module", repo_name = "custom_module_name", version = "0.0.1")

local_path_override(
    module_name = "other_module",
    path = "data/other_module",
)

install_dev_dependencies = use_extension(
    "@fmeum_rules_runfiles_tests//bzlmod:dev_extensions.bzl",
    "install_dev_dependencies",
)

use_repo(
    install_dev_dependencies,
    custom_repo_name = "other_repo",
)
