load("//runfiles:defs.bzl", "cc_runfiles")

filegroup(
    name = "filegroup_same_module",
    srcs = [
        "//tests:data/foo/bar/b.txt",
    ],
)

filegroup(
    name = "filegroup_other_module",
    srcs = [
        "@custom_module_name//tests:data/foo/bar/b.txt",
    ],
)

filegroup(
    name = "filegroup_other_repo",
    srcs = [
        "@custom_repo_name//tests:data/foo/bar/b.txt",
    ],
)

cc_runfiles(
    name = "cc_runfiles_test_runfiles",
    data = [
        ":filegroup_other_module",
        ":filegroup_other_repo",
        ":filegroup_same_module",
        "//tests:data/foo/a.txt",
        "//tests:data/foo/bar",
        "//tests:data/foo/bar/b.txt",
        "@//:BUILD.bazel",
        "@custom_module_name//tests:data/foo/a.txt",
        "@custom_module_name//tests:data/foo/bar",
        "@custom_module_name//tests:data/foo/bar/b.txt",
        "@custom_repo_name//tests:data/foo/a.txt",
        "@custom_repo_name//tests:data/foo/bar",
        "@custom_repo_name//tests:data/foo/bar/b.txt",
    ],
)

cc_test(
    name = "cc_runfiles_test",
    srcs = ["cc_runfiles_test.cpp"],
    deps = [
        ":cc_runfiles_test_runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)
