load("@fmeum_rules_runfiles//runfiles:java_defs.bzl", "java_runfiles")

filegroup(
    name = "filegroup_same_module",
    srcs = [
        "//data/foo:bar/b.txt",
    ],
)

filegroup(
    name = "filegroup_other_module",
    srcs = [
        "@custom_module_name//data/foo:bar/b.txt",
    ],
)

filegroup(
    name = "filegroup_other_repo",
    srcs = [
        "@custom_repo_name//data/foo:bar/b.txt",
    ],
)

java_runfiles(
    name = "java_runfiles_test_runfiles",
    data = [
        ":filegroup_other_module",
        ":filegroup_other_repo",
        ":filegroup_same_module",
        "//data/foo:a.txt",
        "//data/foo:bar",
        "//data/foo:bar/b.txt",
        "@//:BUILD.bazel",
        "@custom_module_name//data/foo:a.txt",
        "@custom_module_name//data/foo:bar",
        "@custom_module_name//data/foo:bar/b.txt",
        "@custom_repo_name//data/foo:a.txt",
        "@custom_repo_name//data/foo:bar",
        "@custom_repo_name//data/foo:bar/b.txt",
    ],
)

java_test(
    name = "java_runfiles_test",
    srcs = ["JavaRunfilesTest.java"],
    main_class = "com.github.fmeum.rules_runfiles.JavaRunfilesTest",
    use_testrunner = False,
    deps = [
        ":java_runfiles_test_runfiles",
        "@bazel_tools//tools/java/runfiles",
    ],
)
