load("@fmeum_rules_runfiles//runfiles:java_defs.bzl", "java_runfiles")
load("//data:constants.bzl", "COMMON_DATA")

filegroup(
    name = "filegroup_same_module",
    srcs = [
        "//data/foo:a.txt",
    ],
)

filegroup(
    name = "filegroup_other_module",
    srcs = [
        "@custom_module_name//data/foo:a.txt",
    ],
)

filegroup(
    name = "filegroup_other_repo",
    srcs = [
        "@custom_repo_name//data/foo:a.txt",
    ],
)

java_runfiles(
    name = "java_runfiles_test_runfiles",
    data = [
        "filegroup_other_repo",
        ":filegroup_other_module",
        ":filegroup_same_module",
    ] + COMMON_DATA,
)

java_test(
    name = "java_runfiles_test",
    srcs = ["JavaRunfilesTest.java"],
    main_class = "com.github.fmeum.rules_runfiles.JavaRunfilesTest",
    use_testrunner = False,
    deps = [":java_runfiles_test_runfiles"],
)
